<?xml version="1.0" encoding="utf-8"?>
<!-- 可以嵌套在ListView中显示，作为一条记录 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bookName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookAuthorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/bookAuthorLabelText"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookAuthorLabel"
            android:gravity="left"
            android:textSize="15sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookInsertTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/bookInsertTimeLabelText"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bookInsertTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookInsertTimeLabel"
            android:gravity="left"
            android:textSize="15sp"
            android:textStyle="italic" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/bookTypeLabelText"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bookType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookTypeLabel"
            android:gravity="left"
            android:textSize="15sp"
            android:textStyle="italic" />
    </RelativeLayout>

</LinearLayout>