<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="left"
    android:orientation="vertical"
    android:paddingBottom="10sp"
    android:paddingTop="10sp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="名称："
            android:textColor="#D2691E"
            android:width="70sp" />

        <EditText
            android:id="@+id/bookName_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookNameLabel"
            android:gravity="top"
            android:inputType="text"
            android:scrollHorizontally="false"
            android:singleLine="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookAuthorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="作	者："
            android:textColor="#D2691E"
            android:width="70sp" />

        <EditText
            android:id="@+id/bookAuthor_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookAuthorLabel"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookIsbnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="ISBN："
            android:textColor="#D2691E"
            android:width="70sp" />

        <EditText
            android:id="@+id/bookIsbn_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookIsbnLabel"
            android:editable="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookPagesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="总页码："
            android:textColor="#D2691E"
            android:width="70sp" />

        <EditText
            android:id="@+id/bookTotalPages_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookPagesLabel"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookReadedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="已读页码："
            android:textColor="#D2691E"
            android:width="70sp" />

        <EditText
            android:id="@+id/bookReaded_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookReadedLabel"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_book_type_label"
            android:textColor="#D2691E"
            android:width="70sp" />

        <Spinner
            android:id="@+id/spinner_book_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookTypeLabel"
            android:drawSelectorOnTop="true"
            android:prompt="@string/spinner_book_type_prompt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookBuyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/spinner_book_buy_status_label"
            android:textColor="#D2691E"
            android:width="70sp" />

        <Spinner
            android:id="@+id/spinner_book_buy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookBuyLabel"
            android:drawSelectorOnTop="true"
            android:prompt="@string/spinner_book_buy_status_prompt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bookReadStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/spinner_book_read_status_label"
            android:textColor="#D2691E"
            android:width="70sp" />

        <Spinner
            android:id="@+id/spinner_book_read"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bookReadStatusLabel"
            android:drawSelectorOnTop="true"
            android:prompt="@string/spinner_book_read_status_prompt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/edit_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="提交" />

        <Button
            android:id="@+id/back_main_from_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/edit_book"
            android:onClick="onClick"
            android:text="返回" />
    </RelativeLayout>

</LinearLayout>